<resources>
    <string name="app_name">Cafstone</string>
    <string name="signup">Daftar</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Sambutlah Setiap Langkahmu dengan \n Aroma Baru, Setiap Tawa dengan Rasa \n Bahagia, dan Setiap Kesempatan dengan \n Kesempurnaan Kuliner</string>
    <string name="title_welcome_page">Join And \n Explore With Us</string>
    <string name="title_signup_page">Welcome! \n Create your New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Name</string>
    <string name="passwordconfirm">Password Confirm</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="login_cafstone_title">Cafstone</string>
    <string name="subtitle_title">Welcome Back! \n Glad To See You, Again!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new">Create New</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="hint_password_confirm">Password Confirm</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_to">Welcome to</string>
    <string name="welcome_to2">Harmonizing with Flavor, \nCloser with Distance</string>
    <string name="welcome_to3">Exploring culinary \ndelights</string>
    <string name="submit">Submit</string>
    <string name="tab_text_1">Ringkasan</string>
    <string name="tab_text_2">Ulasan</string>
    <string name="tab_text_3">Tentang</string>

    <string name="onboarding_text1">Explore Cafes and Restaurants around you,\naccording to your preferences.</string>
    <string name="onboarding_text2">Experience Perfection in Every Corner of \nthe City with Cafstone Comfort in Your Hand.</string>
    <string name="onboarding_text3">Explore the Delights of the Culinary \nWorld. Comfort in your hand.</string>
    <string name="skip">Skip</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="lokasi">Lokasi</string>
    <string name="mau_kemana_nih">Mau kemana nih? </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="destination_title">Destination Title With Image and Also Restaurant Type</string>
    <string name="destination_image">Destination Image</string>
    <string name="destination_address">Destination Address</string>
    <string name="rating">rating</string>
    <string name="rating_4_5">4.5</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="resto">Resto</string>
    <string name="cafe_terdekat">Terdekat</string>
    <string name="price">Harga</string>
    <string name="low_price_string">Termurah</string>
    <string name="rekomendasi_cafe_nyaman_untuk_anda">Cafe Ternyaman Untuk Anda</string>
    <string name="resto_yang_lagi_viral">Cafe Yang Lagi Viral</string>
    <string name="resto_mewah">Resto Mewah Buat Kamu</string>
    <string name="icon_maps_terdekat">icon maps terdekat</string>
    <string name="icon_harga_terendah">icon harga terendah</string>
    <string name="icon_rating_jempolan">icon rating jempolan</string>
    <string name="user_preference">User Preference</string>
    <string name="serve_beer">Serve Beer</string>
    <string name="indonsian_food">Indonsian Food</string>
    <string name="chinese_food">Chinese Food</string>
    <string name="american_food">American Food</string>
    <string name="italian_food">Italian Food</string>
    <string name="korean_food">Korean Food</string>
    <string name="japanese_food">Japanese Food</string>
    <string name="thai_food">Thailand Food</string>
    <string name="indian_food">Indian Food</string>
    <string name="fast_food">Fast Food</string>
    <string name="vegetarian_food">Vegetarian Food</string>
    <string name="steak_house">Steak House</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="murah">Murah</string>
    <string name="sedang">Sedang</string>
    <string name="mahal">Mahal</string>
    <string name="lumayan">Lumayan</string>
    <string name="rekomendasi">Cafe Yang Mungkin Anda Sukai</string>
    <string name="menyediakan_beer">Menyediakan Beer</string>
    <string name="menyediakan_wine">Menyediakan Wine</string>
    <string name="menyediakan_cocktail">Menyediakan Cocktail</string>
    <string name="baik_untuk_anak_anak">Baik Untuk Anak Anak</string>
    <string name="baik_untuk_group">Baik Untuk Group</string>
    <string name="reservable">Reservable</string>
    <string name="menyediakan_tempat_diluar_ruangan">Menyediakan Tempat Diluar Ruangan</string>
    <string name="menyediakan_dessert">Menyediakan Dessert</string>
    <string name="live_music">Live Music</string>
    <string name="level_harga">Level Harga</string>
    <string name="preference">Preference</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="tunai">Tunai</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="nfc">NFC</string>
    <string name="debit_card">Debit Card</string>
    <string name="debit_card1">Debit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="profile">Profile</string>
    <string name="place_buka">Buka</string>
    <string name="place_tutup">Tutup</string>
    <string name="place_buka_24_jam">Buka 24 jam</string>
    <string name="rating_jempolan">Rating Jempolan</string>
    <string name="tempat_dengan_rekomendasi_terbaik_ada_di_dekat_kamu_loh">Tempat dengan rekomendasi terbaik ada di dekat kamu loh!</string>
    <string name="place_terdekat">Terdekat</string>
    <string name="berikut_adalah_tempat_terdekat_dari_lokasi_anda">Berikut adalah tempat terdekat dari lokasi Anda</string>
    <string name="place_termurah">Termurah</string>
    <string name="ini_rekomendasi_tempat_dengan_harga_termurah">Ini rekomendasi tempat dengan harga termurah</string>
    <string name="placeType">Tipe Restoran</string>
    <string name="arrow_left_corousel">Arrow Left Corousel</string>
    <string name="arrow_right_corousel">Arrow right Corousel</string>
    <string name="ganti_katasandi">Ganti Katasandi</string>
    <string name="penawaran">Penawaran</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="persediaan_makanan">Pilihan Makanan</string>
    <string name="suasana">Suasana</string>
    <string name="tipe_pembayaran">Tipe Pembayaran</string>
    <string name="opsi_layanan">Opsi Layanan</string>
    <string name="reservasi">Reservasi</string>
    <string name="categoy">Kategori</string>
    <string name="distance">Jarak</string>
    <string name="distance2">jarak</string>
    <string name="berdasarkan_harga">Berdasarkan Harga</string>
    <string name="berdasarkan_makanan">Berdasarkan Makanan</string>
    <string name="filter">Filter</string>
    <string name="berdasarkan_lokasi">Berdasarkan Lokasi</string>
    <string name="terdekat">Terdekat</string>
</resources>