<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_signup_scene"
    tools:context=".view.signup.SignupActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center"
        android:text="@string/login_cafstone_title"
        android:textColor="@color/primary_color"

        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"

        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:lineHeight="14pt"
        android:text="@string/title_signup_page"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:alpha="100"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/name"
        android:textColor="@color/black_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alpha="0"

        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:startIconDrawable="@drawable/ic_person_width"
        app:startIconTint="@color/light_black_text"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/et_form_model"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:textColor="@color/black_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alpha="0"

        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/light_black_text"
        tools:alpha="100">

        <com.cafstone.application.view.signup.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/et_form_model"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="@color/black_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alpha="0"

        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"

        app:endIconTint="@color/light_black_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        app:startIconDrawable="@drawable/ic_password"
        tools:alpha="100">

        <com.cafstone.application.view.signup.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_form_model"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordConfirmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/passwordconfirm"
        android:textColor="@color/black_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alpha="0"

        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"

        app:endIconTint="@color/light_black_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmTextView"
        app:startIconDrawable="@drawable/ic_password"
        tools:alpha="100">

        <com.cafstone.application.view.signup.PasswordConfirmEditText
            android:id="@+id/passwordConfirmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_form_model"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.cafstone.application.view.signup.MyButton
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:alpha="0"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/signup"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditTextLayout"
        tools:alpha="100" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/already_have_an_account"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>